--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -17,15 +17,15 @@
 					<h1>
 						<a href="{{ page.project.url }}" target="_blank" title="{{ page.project.title }}" rel="nofollow">{{ page.project.title }}</a>
 					</h1>
-					<span class="h2">Role</span>
+					<span class="h2">Description</span>
 					{{ page.content }}
 					<div class="project-meta">
 						<span class="h2">Technologies</span>
 						<p>{{ page.project.tech }}</p>
-						<span class="h2">Agency</span>
-						<p><a title="{{ page.agency.title }}" href="{{ page.agency.url }}" target="_blank" rel="nofollow">{{ page.agency.title }}</a></p>
+						<span class="h2">Source</span>
+						<p><a title="{{ page.source.title }}" href="{{ page.source.url }}" target="_blank" rel="nofollow">{{ page.source.title }}</a></p>
 						<span class="h2">Year</span>
-						<p>{{ page.agency.year }}</p>
+						<p>{{ page.source.year }}</p>
 					</div>
 				</article>
 				<aside>
