--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,7 +2,7 @@
  ****************************************************************/
 
 $font-default: Helvetica, Arial, sans-serif;
-$font-poppins: 'Poppins', $font-default;
+$font-poppins: 'Droid Sans', $font-default;
 $font-lekton: 'Lekton', $font-default;
 
 /* Colors
