--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -16,7 +16,7 @@
 }
 /* devanagari */
 @font-face {
-	font-family: 'Helvetica';
+	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: normal;
 	src: local('Helvetica SemiBold'), local('Helvetica-SemiBold'), url(/assets/fonts/pxiByp8kv8JHgFVrLEj6Z11lFd2JQEl8qw.woff2) format('woff2');
@@ -24,7 +24,7 @@
 }
 /* latin-ext */
 @font-face {
-	font-family: 'Helvetica';
+	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: normal;
 	src: local('Helvetica SemiBold'), local('Helvetica-SemiBold'), url(/assets/fonts/pxiByp8kv8JHgFVrLEj6Z1JlFd2JQEl8qw.woff2) format('woff2');
@@ -32,7 +32,7 @@
 }
 /* latin */
 @font-face {
-	font-family: 'Helvetica';
+	font-family: 'Open Sans';
 	font-style: normal;
 	font-weight: normal;
 	src: local('Helvetica SemiBold'), local('Helvetica-SemiBold'), url(/assets/fonts/pxiByp8kv8JHgFVrLEj6Z1xlFd2JQEk.woff2) format('woff2');
