--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 /* Fonts
  ****************************************************************/
 
-$font-default: Helvetica, Arial, sans-serif;
-$font-Helvetica: 'Droid Sans', $font-default;
+$font-default: 'Open Sans', Arial, sans-serif;
+$font-OpenSans: 'Open Sans', $font-default;
 $font-lekton: 'Lekton', $font-default;
 
 /* Colors
