--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -5,7 +5,7 @@ html {
 body {
 	background: $color-white;
 	color: $color-black;
-	font-family: $font-Helvetica;
+	font-family: $font-OpenSans;
 	font-size: 1.8em;
 	line-height: 1.6;
 	font-weight: normal;
@@ -37,7 +37,7 @@ h2,
 h3,
 .h3 {
 	color: $color-black;
-	font-family: $font-Helvetica;
+	font-family: $font-OpenSans;
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 1;
