--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 /* Fonts
  ****************************************************************/
 
-$font-default: 'Open Sans', Arial, sans-serif;
+$font-default: 'Helvetica', Arial, sans-serif;
 $font-OpenSans: 'Open Sans', $font-default;
 $font-lekton: 'Lekton', $font-default;
 
