--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -8,7 +8,7 @@ body {
 	font-family: $font-OpenSans;
 	font-size: 1.8em;
 	line-height: 1.6;
-	font-weight: normal;
+	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -26,7 +26,7 @@ h2,
 	color: $color-silver-chalice;
 	display: block;
 	font-family: $font-lekton;
-    font-size: 1rem;
+    font-size: 3rem;
     font-weight: 400;
     letter-spacing: .2rem;
     line-height: 1;
